--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,7 @@
 = FortitudeRails
 
 This project rocks and uses MIT-LICENSE.
+
+### Thanks & Inspiration
+
+[twitter-bootstrap-rails](https://github.com/seyhunak/twitter-bootstrap-rails)
